# data-contract-enforcer

./: .env.example  .gitignore  DOMAIN_NOTES.md  README.md  pyproject.toml
contract_registry/: subscriptions.yaml
enforcer_report/: ai_extensions.json  report_data.json  sunday_report.md
generated_contracts/: langsmith-trace-runs.yaml  langsmith-trace-runs_dbt.yml  week3-document-refinery-extractions.yaml  week3-document-refinery-extractions_dbt.yml  week4-brownfield-cartographer-lineage.yaml  week4-brownfield-cartographer-lineage_dbt.yml  week5-event-sourcing-platform-events.yaml  week5-event-sourcing-platform-events_dbt.yml
outputs/migrate/: inject_violations.py  traces_export_to_jsonl.py  week3_ledger_to_extractions.py  week4_graph_to_snapshot.py  week5_events_to_jsonl.py
outputs/traces/: runs.jsonl
outputs/week4/: lineage_snapshots.jsonl
outputs/week5/: events.jsonl  events_violated.jsonl
schema_snapshots/: baselines.json
schema_snapshots/diffs/: langsmith-trace-runs.json  week3-document-refinery-extractions.json  week4-brownfield-cartographer-lineage.json  week5-event-sourcing-platform-events.json
validation_reports/: langsmith_baseline.json  schema_evolution_langsmith-trace-runs.json  schema_evolution_week3-document-refinery-extractions.json  schema_evolution_week4-brownfield-cartographer-lineage.json  schema_evolution_week5-event-sourcing-platform-events.json  thursday_baseline.json  traces_baseline.json  violated_week3.json  violated_week5.json  week3_baseline.json  week4_baseline.json  week5_baseline.json
violation_log/: violations.jsonl
(+38 files in other folders)
