[project]
name = "data-contract-enforcer"
version = "0.1.0"
description = "Schema integrity and lineage attribution system for a multi-week data platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "scikit-learn>=1.3",
    "openai>=1.0",
    "anthropic>=0.20",
    "langsmith>=0.1",
    "gitpython>=3.1",
    "soda-core>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ydata-profiling>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ydata-profiling>=4.0",
]
